Adds Switch and Card Docs + Some minor fixes

--- a/docs/docs/components/button.mdx
+++ b/docs/docs/components/button.mdx
@@ -6,7 +6,7 @@ Here's a quick start guide to get started with the button component
 
 ### Importing Component
 
-```js
+```jsx
 import { Button } from "@hover-design/react";
 ```
 
