Fix typo in docs

--- a/docs/docs/components/input.mdx
+++ b/docs/docs/components/input.mdx
@@ -12,7 +12,7 @@ import { Input } from "@hover-design/react";
 
 ### Code Snippets and Examples
 
-##### Button Default
+##### Input Default
 
 import "@hover-design/react/dist/style.css";
 import { Input } from "@hover-design/react";
