Fix incorrect code snippet in docs

--- a/docs/docs/components/badge.mdx
+++ b/docs/docs/components/badge.mdx
@@ -67,12 +67,9 @@ import { Badge } from "@hover-design/react";
 
 ```jsx
 <div className="App">
-  <Button variant="dark">
-    <Badge color="red" label="New" /> Profile
-  </Button>
-  <Button variant="dark">
-    Notifications <Badge color="red" label="7" shape="rounded" />
-  </Button>
+  <Badge color="red" label="3" shape="rounded" position="top-end">
+    <Button variant="dark">Notifications</Button>
+  </Badge>
 </div>
 ```
 
