[UPDATED] card, list, and switch minor bug

--- a/docs/docs/components/switch.mdx
+++ b/docs/docs/components/switch.mdx
@@ -2,7 +2,7 @@
 
 ### Quick start
 
-Here's a quick start guide to get started with the button component
+Here's a quick start guide to get started with the switch component
 
 ### Importing Component
 
