--- a/docs/docs/components/card.mdx
+++ b/docs/docs/components/card.mdx
@@ -2,7 +2,7 @@
 
 ### Quick start
 
-Here's a quick start guide to get started with the button component
+Here's a quick start guide to get started with the card component
 
 ### Importing Component
 
