--- a/docs/docs/components/divider.mdx
+++ b/docs/docs/components/divider.mdx
@@ -81,7 +81,7 @@ import { Divider } from "@hover-design/react";
   <Divider orientation="vertical" label="label" />
 </div>
 
-### Props Referece
+### Props Reference
 
 | Attributes      |                 Values                  | Optional ? |
 | :-------------- | :-------------------------------------: | ---------: |
