--- a/docs/docs/components/divider.mdx
+++ b/docs/docs/components/divider.mdx
@@ -65,7 +65,7 @@ import { Divider } from "@hover-design/react";
 </div>
 ```
 
-<div style={{ height: "50px" }}>
+<div style={{ height: "100px", margin: "0 auto", width: "fit-content" }}>
   <Divider orientation="vertical" />
 </div>
 
