divider default color changed

--- a/docs/docs/components/divider.mdx
+++ b/docs/docs/components/divider.mdx
@@ -83,13 +83,13 @@ import { Divider } from "@hover-design/react";
 
 ### Props Reference
 
-| Attributes      |                 Values                  | Optional ? |
-| :-------------- | :-------------------------------------: | ---------: |
-| orientation     |    ` vertical` &#124; `horizontal `     |        Yes |
-| type            | `solid` &#124; `dashed` &#124; `dotted` |        Yes |
-| size            |                `string`                 |        Yes |
-| label           |      `String` &#124; `JSX Element`      |        Yes |
-| color           |                `string`                 |        Yes |
-| labelColor      |                `string`                 |        Yes |
-| labelBackground |                `string`                 |        Yes |
-| labelPosition   |  `start` &#124; `center` &#124; `end`   |        Yes |
+| Attributes      |                 Values                  | Default Value | Optional ? |
+| :-------------- | :-------------------------------------: | :-----------: | ---------: |
+| orientation     |    ` vertical` &#124; `horizontal `     | `horizontal`  |        Yes |
+| type            | `solid` &#124; `dashed` &#124; `dotted` |    `solid`    |        Yes |
+| size            |                `string`                 |     `1px`     |        Yes |
+| label           |      `String` &#124; `JSX Element`      |               |        Yes |
+| color           |                `string`                 |    `grey`     |        Yes |
+| labelColor      |                `string`                 |    `black`    |        Yes |
+| labelBackground |                `string`                 |    `white`    |        Yes |
+| labelPosition   |  `start` &#124; `center` &#124; `end`   |   `center`    |        Yes |
