--- a/docs/docs/components/divider.mdx
+++ b/docs/docs/components/divider.mdx
@@ -23,6 +23,8 @@ import { Divider } from "@hover-design/react";
 </div>
 ```
 
+> **Note:** Horizontal Divider's width will depend on container's width
+
 <Divider />
 
 ##### Divider Dashed
@@ -64,6 +66,8 @@ import { Divider } from "@hover-design/react";
   <Divider orientation="vertical" />
 </div>
 ```
+
+> **Note:** Vertical Divider's height will depend on container's height
 
 <div style={{ height: "100px", margin: "0 auto", width: "fit-content" }}>
   <Divider orientation="vertical" />
