--- a/docs/docs/components/text-area.mdx
+++ b/docs/docs/components/text-area.mdx
@@ -17,122 +17,82 @@ import { Textarea } from "@hover-design/react";
 ### Default
 
 ```jsx
-  <TextArea
-  placeholder="AutoSize">
-  </Textarea>
+<TextArea placeholder="AutoSize"></TextArea>
 ```
 
-<TextArea
-  placeholder="AutoSize">
-  </Textarea>
+<TextArea placeholder="AutoSize"></TextArea>
 
 ### Fixedsize
 
 ```jsx
-  <TextArea
-  placeholder="Fixedsize"
-  fixedSize="true">
-  </Textarea>
+<TextArea placeholder="Fixedsize" fixedSize="true"></TextArea>
 ```
 
-<TextArea
-  placeholder="Fixedsize"
-  fixedSize="true">
-  </Textarea>
+<TextArea placeholder="Fixedsize" fixedSize="true"></TextArea>
 
 ### Rows & Cols
 
 ```jsx
-  <TextArea
-  placeholder="Rows"
-  rows={5}>
-  </Textarea>
+<TextArea placeholder="Rows" rows={5}></TextArea>
 ```
 
 ```jsx
-  <TextArea
-  placeholder="Cols"
-  cols={10}>
-  </Textarea>
+<TextArea placeholder="Cols" cols={10}></TextArea>
 ```
 
-<TextArea
-  placeholder="Rows"
-  rows={5}>
-  </Textarea>
-<span style={{padding:'5px'}}></span>
-<TextArea
-  placeholder="Cols"
-  cols={10}>
-  </Textarea>
+<TextArea placeholder="Rows" rows={5}></TextArea>
+<span style={{ padding: "5px" }}></span>
+<TextArea placeholder="Cols" cols={10}></TextArea>
 
 ### Maximum & Minimum Length
 
 ```jsx
-  <TextArea
+<TextArea
   placeholder="Maximum height"
   maxlength={12}
-  defaultValue="Hover Maximum">
-  </Textarea>
+  defaultValue="Hover Maximum"
+></TextArea>
 ```
 
 ```jsx
-  <TextArea
+<TextArea
   placeholder="Minimum height"
   minlength={10}
-  defaultValue="Hover Minimum">
-  </Textarea>
+  defaultValue="Hover Minimum"
+></TextArea>
 ```
 
 <TextArea
   placeholder="Maximum Length"
   maxlength={12}
-  defaultValue="Hover Maximum">
-  </Textarea>
-<span style={{padding:'5px'}}></span>
+  defaultValue="Hover Maximum"
+></TextArea>
+<span style={{ padding: "5px" }}></span>
 <TextArea
   placeholder="Minimum Length"
   minlength={10}
-  defaultValue="Hover Minimum">
-  </Textarea>
+  defaultValue="Hover Minimum"
+></TextArea>
 
 ### Status Border
 
 ```jsx
-  <TextArea
-  placeholder="Error"
-  statusBorder="red">
-  </Textarea>
+<TextArea placeholder="Error" statusBorder="red"></TextArea>
 ```
 
 ```jsx
-  <TextArea
-  placeholder="Warning"
-  statusBorder="yellow">
-  </Textarea>
+<TextArea placeholder="Warning" statusBorder="yellow"></TextArea>
 ```
 
 ```jsx
-  <TextArea
-  placeholder="Valid"
-  statusBorder="green">
-  </Textarea>
+<TextArea placeholder="Valid" statusBorder="green"></TextArea>
 ```
 
-<TextArea
-  placeholder="Error"
-  statusBorder="red">
-  </Textarea>
-<span style={{padding:'5px'}}></span>
-<TextArea
-  placeholder="Warning"
-  statusBorder="yellow">
-  </Textarea>
-<span style={{padding:'5px'}}></span>
-<TextArea
-  placeholder="Valid"
-  statusBorder="green">
-  </Textarea>
+<TextArea placeholder="Error" statusBorder="red"></TextArea>
+<span style={{ padding: "5px" }}></span>
+<TextArea placeholder="Warning" statusBorder="yellow"></TextArea>
+<span style={{ padding: "5px" }}></span>
+<TextArea placeholder="Valid" statusBorder="green"></TextArea>
 
 ## Props Referece
 
