smash some more :bug: s

--- a/docs/docs/components/text-area.mdx
+++ b/docs/docs/components/text-area.mdx
@@ -7,12 +7,12 @@ Here's a quick start guide to get started with the textarea component
 ## Importing Component
 
 ```jsx
-import { Textarea } from "@hover-design/react";
+import { TextArea } from "@hover-design/react";
 ```
 
 ## Code Snippets and Examples
 
-import { Textarea } from "@hover-design/react";
+import { TextArea } from "@hover-design/react";
 
 ### Default
 
