--- a/docs/docs/components/tab.mdx
+++ b/docs/docs/components/tab.mdx
@@ -217,7 +217,7 @@ const tabData = [
 | grow         |                  grows to fit the containter `boolean`                  |    `false`    |        Yes |
 | height       |                                `string`                                 |    `40px`     |        Yes |
 | tabData      |                       `Array of` **_Tab Object_**                       |               |         No |
-| children     | _ not a prop but children to the `<Tab/>`_ `(selectedTabObject)=> JSX ` |               |        Yes |
+| children     | _ not a prop but children to the `<Tab/>`_ `(selectedTabObject)=> JSX ` |               |         No |
 
 ### Tab Object
 
