--- a/docs/docs/components/tab.mdx
+++ b/docs/docs/components/tab.mdx
@@ -202,7 +202,7 @@ const tabData = [
 
 | Attributes   |                                 Values                                  | Default Value | Optional ? |
 | :----------- | :---------------------------------------------------------------------: | :-----------: | ---------: |
-| defaultValue |                        `string` &#124; `number`                         |               |        Yes |
+| defaultValue |                        `string` &#124; `number`                         |               |         No |
 | value        |                        `string` &#124; `number`                         |               |        Yes |
 | color        |                                `string`                                 |   `#2F80ED`   |        Yes |
 | background   |                                `string`                                 |   `#d7e9ff`   |        Yes |
