changes for build

--- a/docs/docs/components/tab.mdx
+++ b/docs/docs/components/tab.mdx
@@ -109,6 +109,8 @@ const tabData = [
 ##### Controlled Tabs
 
 ```jsx
+const [activeTab, setActiveTab] = useState("first");
+
 const tabData = [
   {
     label: "First",
@@ -133,7 +135,12 @@ const tabData = [
 ];
 
 <div className="App">
-  <Tab defaultValue={"first"} tabData={tabData}>
+  <Tab
+    value={activeTab}
+    onChange={(selectedTab) => setActiveTab(selectedTab.value)}
+    value
+    tabData={tabData}
+  >
     {(selectedTab) => <div>{selectedTab.label}</div>}
   </Tab>
 </div>;
@@ -200,17 +207,17 @@ const tabData = [
 
 ### Props Reference
 
-| Attributes   |                                 Values                                  | Default Value | Optional ? |
-| :----------- | :---------------------------------------------------------------------: | :-----------: | ---------: |
-| defaultValue |                        `string` &#124; `number`                         |               |         No |
-| value        |                        `string` &#124; `number`                         |               |        Yes |
-| color        |                                `string`                                 |   `#2F80ED`   |        Yes |
-| background   |                                `string`                                 |   `#d7e9ff`   |        Yes |
-| onChange     |                       `(selectedTabObject)=>void`                       |   `()=>{}`    |        Yes |
-| grow         |                  grows to fit the containter `boolean`                  |    `false`    |        Yes |
-| height       |                                `string`                                 |    `40px`     |        Yes |
-| tabData      |                       `Array of` **_Tab Object_**                       |               |         No |
-| children     | _ not a prop but children to the `<Tab/>`_ `(selectedTabObject)=> JSX ` |               |         No |
+| Attributes   |                                      Values                                      | Default Value | Optional ? |
+| :----------- | :------------------------------------------------------------------------------: | :-----------: | ---------: |
+| defaultValue | _ must be equal to value from ** Tab Object ** _ <br /> `string` &#124; `number` |               |        Yes |
+| value        | _ must be equal to value from ** Tab Object ** _ <br /> `string` &#124; `number` |               |        Yes |
+| color        |                                     `string`                                     |   `#2F80ED`   |        Yes |
+| background   |                                     `string`                                     |   `#d7e9ff`   |        Yes |
+| onChange     |                           `(selectedTabObject)=>void`                            |   `()=>{}`    |        Yes |
+| grow         |                      grows to fit the containter `boolean`                       |    `false`    |        Yes |
+| height       |                                     `string`                                     |    `40px`     |        Yes |
+| tabData      |                           `Array of` **_Tab Object_**                            |               |         No |
+| children     |  _ not a prop but children to the `<Tab/>`_ <br />`(selectedTabObject)=> JSX `   |               |         No |
 
 ### Tab Object
 
