--- a/docs/docs/components/input.mdx
+++ b/docs/docs/components/input.mdx
@@ -17,7 +17,7 @@ import { Input } from "@hover-design/react";
 import "@hover-design/react/dist/style.css";
 import { Input, Label, Flex } from "@hover-design/react";
 export const InputComponent = ({ statusBorder, children, ...props }) => (
-  <Input statusBorder={status} {...props} />
+  <Input statusBorder={statusBorder} {...props} />
 );
 export const LabelComponent = ({ children, ...props }) => (
   <Label {...props}>{children} </Label>
